static/css/base.css
body {
    padding: 0;
    margin: 0;
    font-family: "Clear Sans", "Helvetica Neue", Helvetica, sans-serif;
    font-size: 18px;
    color: #333;
    font-weight: 300;
    -webkit-tap-highlight-color: transparent;
}

body, input, button {
    -webkit-font-smoothing: antialiased;
}

input, button {
    -webkit-appearance: none;
    -moz-appearance: none;
    border-radius: 0;
}

button {
    cursor: pointer;
}

*:focus {
    outline: none;
}

h1 {
    font-size: 250%;
    font-weight: 100;
    margin: 20px 0;
}

h2 {
    font-size: 120%;
    font-weight: 400;
}

h3 {
    font-size: 110%;
    font-weight: 400;
}

a {
    color: #23b4ff;
    text-decoration: none;
    font-weight: 400;
}

a:hover {
    opacity: 0.7;
}

section {
    padding: 0 40px;
    margin: 40px 0;
    clear: both;
}

footer {
    display: block;
    padding: 10px;
    text-align: center;
    font-size: 80%;
    border-top: solid 1px #ccc;
}

footer .copyright {
    color: #ccc;
}

footer a {
    margin: 0 5px;
}

table {
    margin-bottom: 100px;
    font-size: 90%;
}

th {
    text-align: left;
    vertical-align: top;
    width: 150px;
}

svg.icon {
    fill: currentColor;
    stroke: currentColor;
}

header {
    background: #ffffff;
    position: fixed;
    top: 0;
    width: 100%;
    z-index: 1;
    padding: 0 10px;
    box-sizing: border-box;
    border-bottom: solid 1px #ccc;
}

header .inner {
    height: 50px;
    display: flex;
    align-items: stretch;
    width: 100%;
    margin: 0 auto;
}

header .home, header .links, header nav, header nav ul {
    display: flex;
    align-items: center;
}

header nav ul {
    list-style: none;
    margin: 0;
    padding: 0;
}

header nav ul li {
    display: inline-block;
    margin-left: 10px;
}

header .icon.padlock {
    width: 35px;
    height: 35px;
    margin-right: 10px;
    margin-left: 3px;
}

header .spacer {
    flex: 1;
}

header .links a {
    line-height: 0;
    margin-left: 10px;
}

header .links .icon {
    width: 23px;
    height: 23px;
}

ul.articles {
    list-style: none;
    margin: 0;
    padding: 0;
}

ul.articles li {
    margin: 20px 0;
}

article {
    padding: 0 40px;
    margin: 40px 0;
    box-sizing: border-box;
    clear: both;
}

article .publish-date {
    color: #aaa;
}

li article {
    padding: 0;
    margin: 0;
}

li article .title {
    display: flex;
    align-items: center;
}

li article h2 {
    flex: 1;
    margin: 0;
}

main {
    margin: 80px auto;
}

header .inner, main {
    max-width: 800px;
}

figure {
    margin: 20px;
    text-align: center;
}

figure.center img {
    max-height: 500px;
}

figure.rounded img {
    border-radius: 5px;
}

figure img {
    max-height: 400px;
    max-width: 100%;
}

figure.float img {
    max-width: 300px;
}

figure.float.right {
    float: right;
    margin: 0 0 0 20px;
}

figure.float.left {
    float: left;
    margin: 0 20px 0 0;
}

.newsletter-signup {
    box-sizing: border-box;
    -moz-box-sizing: border-box;
}

.newsletter-signup form {
    display: -webkit-flex;
    display: flex;
}

.newsletter-signup .email {
    min-width: 0;
    display: block;
    background-color: #fff;
    border: solid 1px #23b4ff;
    font-size: 110%;
    font-family: inherit;
    padding: 10px;
    margin: 0;
    -webkit-flex: 1;
    flex: 1;
}

.newsletter-signup .email::-webkit-input-placeholder {
    color: #59c6ff;
}

.newsletter-signup .button {
    display: block;
    width: 120px;
    font-size: 110%;
    font-family: inherit;
    background: #23b4ff;
    color: #fff;
    padding: 10px;
    margin: 0;
    cursor: pointer;
    border: solid 2px #23b4ff;
}

.note {
    background: rgba(89, 198, 255, 0.1);
    padding: 20px;
    border: solid 1px #23b4ff;
    clear: both;
}

.note p:first-child {
    margin-top: 0;
}

.note p:last-child {
    margin-bottom: 0;
}

.download-button {
    display: inline-block;
    font-size: 120%;
    border-radius: 4px;
    border: solid 2px;
    padding: 10px 15px 15px 15px;
    margin: 25px 0;
    position: relative;
}

.download-button span {
    display: inline-block;
    margin: 0 5px;
}

.download-button .icon {
    width: 25px;
    height: 25px;
}

.download-button > * {
    vertical-align: middle;
}

@media (max-width: 500px) {
    section, article {
        padding-left: 20px;
        padding-right: 20px;
    }

    li article .title {
        flex-direction: column;
        align-items: stretch;
    }

    figure.float img {
        max-width: 100%;
    }

    figure.float.left, figure.float.right {
        float: none;
        margin: 20px;
    }
}

